--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="" />
    
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Festivida</title>
+    <title>AvoidEscape</title>
   </head>
   <body>
     <div id="root"></div>
